--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
                         min="10" max="21">
                 </div>
                 <div class="d-flex align-items-end  justify-content-around w-100">
-                    <h2>0</h2>
+                    <h2 id="ply1-score">0</h2>
                     <p>to</p>
-                    <h2>0</h2>
+                    <h2 id="ply2-score">0</h2>
                 </div>
-                <div class="d-flex justify-content-around w-100" style="">
-                    <button type="button" class="btn btn-success">P-1</button>
-                    <button type="button" class="btn btn-success">P-2</button>
+                <div class="d-flex justify-content-around w-100">
+                    <button type="button" class="btn btn-success ply1-btn">Player 1</button>
+                    <button type="button" class="btn btn-success ply2-btn">Player 2</button>
                 </div>
-                <div class="d-flex justify-content-around w-100" style="">
-                    <button type="button" class="btn btn-success">Reset</button>
+                <div class="d-flex justify-content-around">
+                    <button type="button" class="btn btn-success reset-btn" style="width: 167px">Reset</button>
                 </div>
             </div>
         </div>
     </main> </div>
     </div>
+    <script src="index.js" ></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
